[package]
name = "idz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idz-cli"
path = "src/bin/main.rs"

[dependencies]
arrow-array = { version = "50", default-features = false }
arrow-schema = "50"
parquet = { version = "50", default-features = false, features=["arrow", "zstd"] }
zip = "4.0"
serde = { version = "1", features=["derive"] }
serde_json = "1"
byteorder = "1"
memmap2 = "0.9"
hnsw_rs = "^0.3"
thiserror = "1"
chrono = { version = "0.4", features=["serde"] }
bytes = "1"

# TUI dependencies
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
