[package]
name = "idz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idz-cli"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1", features=["derive"] }
serde_json = "1"
hnsw_rs = "^0.3"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1"

# TUI dependencies
# memmap2 = "0.9" # Keep if main.rs or other parts still use it. For now, assume not directly needed by lib.rs
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
